Name:          bbq
Version:       0.2.0
License:       MIT
License-File:  LICENSE
Copyright:     (c) 2015 Yan.ac
Author:        Minsheng Liu <i@liu.ms>
Maintainer:    Minsheng Liu <i@liu.ms>
Cabal-Version: >= 1.10
Build-Type:    Simple

Executable bbq
  Build-Depends: base,
                 text,
                 mtl,
                 acid-state,
                 safecopy,
                 email-validate,
                 ixset,
                 bytestring,
                 bcrypt,
                 blaze-html,
                 boomerang,
                 happstack,
                 happstack-server,
                 web-routes,
                 web-routes-th,
                 web-routes-happstack,
                 web-routes-boomerang,
                 shakespeare
  Default-Language: Haskell2010
  Hs-Source-Dirs: .
  Main-Is:        bbq.hs
  Other-Modules:  Data.Account
                  BBQ.Sitemap
                  BBQ.Home
                  BBQ.Route
  Buildable:      True
